stylesheets/modules/_buttons.scss
// =========== Buttons 

button::-moz-focus-inner, 
input::-moz-focus-inner { 
    padding: 0; 
    border: 0; 
}

// Choose a div or ul to group up your buttons
div.buttons {
    list-style: none;
    margin: 0 0 $margin-bottom 0;
    @include clearfix;
}

// The standard button has the $color-brand colors
%button {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    cursor: pointer;
    display: inline-block;
    font-size: inherit;
    font-weight: bold;
    font-family: $font-family;
    line-height: 1.25;
    margin: 0;
    padding: 0.35em 0.75em 0.45em 0.75em;
    border: 0;
    vertical-align: baseline;
    text-decoration: none;
    @include border-radius(0.2em);
}

.button, 
input[type="submit"], 
button {
    @extend %button;
    color: $white;
    background: $color-brand;
    &:hover { background: darken($color-brand, 5%); }
    &:active, &:focus {
        @include box-shadow(inset 0 1px 4px rgba($black, 0.7));
        background: darken($color-brand, 10%);
        color: lighten($black, 75%);
    }
}

// The dark button
.button-contrast, 
input[type="submit"].button-contrast, 
button.button-contrast {
    @extend %button;
    color: $white;
    background-color: lighten($black, 15%);
    &:hover { background-color: $black; }
    &:active, 
    &:focus { 
        @include box-shadow(inset 0 1px 4px rgba($black, 0.7));
        background-color: $black; 
        color: lighten($black, 75%);
    }
}

// The soft grey button
.button-soft, 
input[type="submit"].button-soft, 
button.button-soft {
    @extend %button;
    color: lighten($black, 20%);
    background: lighten($black, 80%);
    &:hover {
        color: $black;
        background: lighten($black, 75%);
    }
    &:active, &:focus {
        background: lighten($black, 65%);
        @include box-shadow(inset 0 1px 4px rgba($black, 0.1));
        color: lighten($black, 20%);
    }
}

.button-success, 
input[type="submit"].button-success, 
button.button-success {
    @extend %button;
    color: $white;
    background-color: $color-success;
    &:hover { 
        background-color: darken($color-success, 5%); 
        color: $white;
    }
    &:active, &:focus { 
        background-color: darken($color-success, 10%);
        @include box-shadow(inset 0 1px 4px rgba($black, 0.3));
        color: lighten($black, 75%); 
    }
}

.button-alert, 
input[type="submit"].button-alert, 
button.button-alert {
    @extend %button;
    color: $white;
    background-color: $color-alert;
    &:hover { 
        background-color: darken($color-alert, 5%); 
        color: $white;
    }
    &:active, &:focus { 
        background-color: darken($color-alert, 10%);
        @include box-shadow(inset 0 1px 4px rgba($black, 0.3));
        color: lighten($black, 75%); 
    }
}

